# toml-formatted

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
gradle/: libs.versions.toml
src/main/resources/: http-lib.versions.toml  libs.versions.toml  pyproject.toml  simple-level2.toml  stupid-simple.toml
